# cosmic-applet-template

./: Cargo.toml
res/: com.example.CosmicAppletTemplate.desktop
src/: app.rs  main.rs
