[package]
name = "cosmic-applet-template"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
i18n-embed-fl = "0.8"
once_cell = "1.19.0"
open = "5.1.3"
rust-embed = "8.3.0"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "tokio", "wayland"]

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
